--- a/SoftwareENgineering&WebdevProject/css/footer.css
+++ b/SoftwareENgineering&WebdevProject/css/footer.css
@@ -1,9 +1,16 @@
 footer {
     background-color: #6a0dad;
     color: white;
-    padding: 20px;
+    padding: 20px 0;
     text-align: center;
-    clear: both;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .social ul {
@@ -28,13 +35,15 @@ footer {
 }
 
 .footer-links {
-    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .footer-link {
     color: white;
     text-decoration: none;
-    margin: 0 10px;
+    margin: 0 20px;
     transition: color 0.3s ease;
 }
 
