footer added the right color

--- a/SoftwareENgineering&WebdevProject/css/footer.css
+++ b/SoftwareENgineering&WebdevProject/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #6a0dad;
+    background-color:  #3C0295;
     color: white;
     padding: 20px 0;
     text-align: center;
