index and footer but the footer is broken

--- a/SoftwareENgineering&WebdevProject/css/footer.css
+++ b/SoftwareENgineering&WebdevProject/css/footer.css
@@ -5,23 +5,10 @@ footer {
     text-align: center;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.social {
-    flex: 1; /* Take up remaining space */
-}
-
 .social ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    text-align: left; /* Align social icons to the left */
 }
 
 .social li {
@@ -40,8 +27,7 @@ footer {
 }
 
 .footer-links {
-    flex: 1; /* Take up remaining space */
-    text-align: right; /* Align footer links to the right */
+    text-align: center;
 }
 
 .footer-link {
