--- a/SoftwareENgineering&WebdevProject/css/style.css
+++ b/SoftwareENgineering&WebdevProject/css/style.css
@@ -7,9 +7,9 @@ body {
 }
 
 .banner {
-    width: 99vw;
-    height: calc(100vw * 1920 / 1197);
-    max-height: 700px;
+    width: 100vw;
+    height: calc(100vw * 1024 / 1024);
+    max-height: 500px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -18,10 +18,14 @@ body {
 
 .bannercontainer {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 10px;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .bannercontent {
@@ -39,14 +43,18 @@ body {
     transition: transform 0.2s ease, background-color 0.2s ease, color 0.2s ease;
 }
 
+h2 {
+    font-weight: bold;
+    font-size: 1.6em;
+    text-align: center;
+    margin-top: 20px;
+}
+
+
 .productbutton:hover {
     transform: scale(1.1);
     background-color:#3C0295;
     color: #fff;
-}
-h2 {
-    text-align: center;
-    margin-top: 20px;
 }
 
 .categories {
@@ -80,7 +88,11 @@ h2 {
     object-fit: cover;
     margin-bottom: 10px;
 }
-
+.category-name {
+    text-align: center;
+    color: black;
+    text-decoration: none;
+}
 @keyframes slide-in {
     from {
         transform: translateX(-100%);
