alot of changes

--- a/SoftwareENgineering&WebdevProject/css/login.css
+++ b/SoftwareENgineering&WebdevProject/css/login.css
@@ -34,12 +34,12 @@ input[type="submit"] {
     padding: 12px;
     border: none;
     border-radius: 5px;
-    background-color: #5b2c6f; /* Purple button color */
+    background-color: #3C0295; /* Purple button color */
     color: #ffffff; /* White text color */
     font-size: 16px;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #4b225c; /* Darker purple on hover */
+    background-color: #3C0295; /* Darker purple on hover */
 }
