--- a/SoftwareENgineering&WebdevProject/css/products.css
+++ b/SoftwareENgineering&WebdevProject/css/products.css
@@ -19,7 +19,8 @@
     margin-bottom: 10px;
 }
 
-.filters .filter-btn {
+.filter-btn {
+    display: inline-block;
     margin-bottom: 10px;
     padding: 8px 16px;
     background-color: transparent;
@@ -28,13 +29,15 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 1rem;
+    text-decoration: none; /* Remove underline */
     transition: background-color 0.3s, color 0.3s;
 }
 
-.filters .filter-btn:hover {
+.filter-btn:hover {
     background-color: #3C0295;
     color: white;
 }
+
 
 .sort-by {
     margin-top: 20px;
