--- a/SoftwareENgineering&WebdevProject/css/findus.css
+++ b/SoftwareENgineering&WebdevProject/css/findus.css
@@ -1,25 +1,38 @@
+h1, h2 {
+    color: #6a0dad;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: Arial, sans-serif;
+}
+
+h1 {
+    margin-top: 50px;
+}
+
 .map-container {
     padding: 20px;
     color: #6a0dad;
+    text-align: center;
 }
 
 .map-container .map-frame {
     border: 4px solid purple;
     border-radius: 10px;
     overflow: hidden;
-    width: 90%; /* Adjust the width as needed */
-    height: 400px; /* Adjust the height as needed */
+    width: 90%;
+    height: 400px;
+    margin: 0 auto;
 }
 
 .map-container .map-frame iframe {
     width: 100%;
     height: 100%;
     border: 0;
-    transition: transform 0.5s ease-in-out;
 }
 
 .map-container .map-frame:hover iframe {
-    transform: rotate(360deg);
+
 }
 
 #mapInfo {
