--- a/SoftwareENgineering&WebdevProject/css/dropdown.css
+++ b/SoftwareENgineering&WebdevProject/css/dropdown.css
@@ -1,7 +1,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
-    z-index: 2; /* Ensure the dropdown is above the banner */
+    z-index: 2;
 }
 
 .dropdown-content {
@@ -15,7 +15,7 @@
 }
 
 .dropdown-content a {
-    color: #3C0295; /* Text color */
+    color: #3C0295;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
