--- a/SoftwareENgineering&WebdevProject/css/findus.css
+++ b/SoftwareENgineering&WebdevProject/css/findus.css
@@ -1,5 +1,5 @@
 h1, h2 {
-    color: #6a0dad;
+    color: #3C0295;
     font-size: 2rem;
     margin-bottom: 20px;
     text-align: center;
@@ -12,12 +12,12 @@ h1 {
 
 .map-container {
     padding: 20px;
-    color: #6a0dad;
+    color: #3C0295;
     text-align: center;
 }
 
 .map-container .map-frame {
-    border: 4px solid purple;
+    border: 4px solid #3C0295;
     border-radius: 10px;
     overflow: hidden;
     width: 90%;
