--- a/SoftwareENgineering&WebdevProject/css/login.css
+++ b/SoftwareENgineering&WebdevProject/css/login.css
@@ -1,21 +1,20 @@
-/* Styles for the login form container */
 .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 65vh;
-    background-color: #f5f5f5; /* Light gray background color */
+    background-color: #f5f5f5;
 }
 
 h2 {
     text-align: center;
-    color: #000000; /* Black text color */
+    color: #000000;
 }
 
 label {
     display: block;
     margin-bottom: 8px;
-    color: #000000; /* Black text color */
+    color: #000000;
 }
 
 input[type="text"],
@@ -34,12 +33,12 @@ input[type="submit"] {
     padding: 12px;
     border: none;
     border-radius: 5px;
-    background-color: #3C0295; /* Purple button color */
-    color: #ffffff; /* White text color */
+    background-color: #3C0295;
+    color: #ffffff;
     font-size: 16px;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #3C0295; /* Darker purple on hover */
+    background-color: #3C0295;
 }
