--- a/SoftwareENgineering&WebdevProject/css/products.css
+++ b/SoftwareENgineering&WebdevProject/css/products.css
@@ -6,7 +6,6 @@
     flex-direction: column;
 }
 
-/* Styling for the filters */
 .filters {
     margin-right: 20px;
     display: flex;
@@ -29,7 +28,7 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 1rem;
-    text-decoration: none; /* Remove underline */
+    text-decoration: none;
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -56,7 +55,7 @@
 .product-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; /* Distribute products evenly */
+    justify-content: space-between;
     gap: 20px;
 }
 
@@ -65,7 +64,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
-    flex: 1 0 calc(33.33% - 20px); /* Flexible width */
+    flex: 1 0 calc(33.33% - 20px);
     box-sizing: border-box;
 }
 
@@ -119,10 +118,10 @@
 
     .product-cards {
         width: 100%;
-        justify-content: center; /* Center products */
+        justify-content: center;
     }
 
     .product-card {
-        flex: 1 0 calc(50% - 20px); /* Flexible width */
+        flex: 1 0 calc(50% - 20px);
     }
 }
