--- a/SoftwareENgineering&WebdevProject/css/register.css
+++ b/SoftwareENgineering&WebdevProject/css/register.css
@@ -1,7 +1,7 @@
 .form-container {
     width: 300px;
-    margin: 0 auto; /* Center the container horizontally */
-    margin-top: 50px; /* Adjust top margin for vertical spacing */
+    margin: 0 auto;
+    margin-top: 50px;
     padding: 20px;
     background-color: #ffffff;
     border-radius: 8px;
